tests/hep3_bad_unwrap.hop
// Verifies HEP 3 bad unwrap.
import "hophop/feature/optional"

pub fn bad(x *i32) i32 {
	return *x!
}
